# MyLLM_Arena

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
CleanCode_parseCmdLineArgs/: CC_parseCmdLineArgs.c  CC_parseCmdLineArgs.h  CC_parseCmdLineArgsTest_byCopilot.cxx  CC_parseCmdLineArgsTest_byCopilotChat.cxx  CC_parseCmdLineArgsTest_byCopilotChat_withMyPromptUT.cxx  CMakeLists.txt
MyStartups/AggregateGenCodeDesc/: .gitignore  Dockerfile  README.md  README_AlgorithmB_TDD.md  README_ArchDesign.md  README_ArchDesign_ZH.md  README_IntroAlgABC.md  README_IntroAlgABC_ZH.md  README_RunTestCase.md  README_SharedUS_Convergence.md  README_UbiLang.md  README_UbiLang_ZH.md  README_UserGuide.md  README_UserGuideNG.md  README_UserGuideNG_ZH.md  README_UserGuide_ZH.md  README_UserStory.md  README_UserStoryAlgA.md  README_UserStoryAlgB.md  README_UserStoryAlgC.md  README_UserStoryAlgC_ZH.md  README_UserStoryNG.md  README_UserStoryNG_ZH.md  README_UserStory_ZH.md  README_ZH.md  aggregateGenCodeDesc.py  genCodeDescProtoV26.03.json  genCodeDescProtoV26.04.json  genCodeDescProtocol.json  pyproject.toml  pytest.ini  run_production_gate.sh
MyStartups/AggregateGenCodeDesc/TestsNG-AlgB/: README_RunTestCaseInstruction.md
MyStartups/AggregateGenCodeDesc/TestsNG-AlgC/: README_RunTestCaseInstruction.md  README_USNG_ALGC_HISTORY_COMPLEX_SCOPE_A_09_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLEX_SCOPE_A_10_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLEX_SCOPE_A_11_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLEX_SCOPE_A_12_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLEX_SCOPE_A_13_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLICATED_SCOPE_A_02_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLICATED_SCOPE_A_03_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLICATED_SCOPE_A_04_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLICATED_SCOPE_A_05_ManualInstruction.md  README_USNG_ALGC_HISTORY_COMPLICATED_SCOPE_A_07_ManualInstruction.md  README_USNG_ALGC_HISTORY_SIMPLE_SCOPE_A_01_ManualInstruction.md  README_USNG_ALGC_HISTORY_SIMPLE_SCOPE_A_06_ManualInstruction.md  README_USNG_ALGC_HISTORY_SIMPLE_SCOPE_A_08_ManualInstruction.md
MyStartups/AggregateGenCodeDesc/UserExamples/: README_UserExamples.md
MyStartups/AggregateGenCodeDesc/UserExamples/example01-algb-git-commitdiffset/: expected_result.json
MyStartups/AggregateGenCodeDesc/UserExamples/example02-algb-svn-commitdiffset/: expected_result.json
MyStartups/AggregateGenCodeDesc/UserExamples/example03-algb-svn-period-added-subset/: expected_result.json
MyStartups/AggregateGenCodeDesc/UserExamples/heavy01-git-production-scale/: generate_example.py
MyStartups/AggregateGenCodeDesc/UserExamples/matrix01-git-coverage/: generate_example.py
MyStartups/AggregateGenCodeDesc/UserExamples/matrix02-svn-coverage/: generate_example.py
MyStartups/AggregateGenCodeDesc/UserExamplesNG/: README_UserExamplesNG.md  README_UserExamplesNG_ZH.md  check_info_log.py  render_annotated_commit_diff_set.py
MyStartups/AggregateGenCodeDesc/UserExamplesNG/dataset-AlgB-offline-GIT-basic/: expected_result.json
MyStartups/AggregateGenCodeDesc/UserExamplesNG/dataset-AlgB-offline-SVN-basic/: expected_result.json
MyStartups/AggregateGenCodeDesc/testdata/: README.md
MyStartups/AggregateGenCodeDesc/tests/: README.md  README_CLI_RunTestCaseInstruction.md  README_HARDENING_RunTestCaseInstruction.md  README_INFRA_RunTestCaseInstruction.md  README_INTEGRATION_RunTestCaseInstruction.md  README_RunTestCaseInstruction.md  README_STRESS_10PLUS_ManualInstruction.md  README_SVN_Lineage_Experiments.md  README_US10_ManualInstruction.md  README_US10_RunTestCaseInstruction.md  README_US10_SVN_ManualInstruction.md  README_US11_ManualInstruction.md  README_US11_RunTestCaseInstruction.md  README_US11_SVN_ManualInstruction.md  README_US12_ManualInstruction.md  README_US12_RunTestCaseInstruction.md  README_US12_SVN_ManualInstruction.md  README_US13_ManualInstruction.md  README_US13_RunTestCaseInstruction.md  README_US14_RunTestCaseInstruction.md  README_US14_SVN_ManualInstruction.md  README_US15_ManualInstruction.md  README_US15_RunTestCaseInstruction.md  README_US16_ManualInstruction.md  README_US16_RunTestCaseInstruction.md  README_US17_ManualInstruction.md  README_US17_RunTestCaseInstruction.md  README_US18_ManualInstruction.md  README_US18_RunTestCaseInstruction.md  README_US19_ManualInstruction.md  README_US19_RunTestCaseInstruction.md  README_US1_ManualInstruction.md  README_US1_RunTestCaseInstruction.md  README_US20_RunTestCaseInstruction.md  README_US21_RunTestCaseInstruction.md  README_US22_RunTestCaseInstruction.md  README_US23_RunTestCaseInstruction.md  README_US24_RunTestCaseInstruction.md  README_US25_RunTestCaseInstruction.md  README_US26_RunTestCaseInstruction.md  (+74 more)
(+649 files in other folders)
